external-crates/move/crates/move-compiler/tests/move_2024/parser/struct_ellipsis_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_2024/parser/struct_ellipsis_invalid.move:8:11
  │
8 │     fun f(y: X): u64 {
  │           ^ Unused parameter 'y'. Consider removing or prefixing with an underscore: '_y'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/struct_ellipsis_invalid.move:9:13
  │
9 │         let .. = y;
  │             ^^
  │             │
  │             Unexpected '..'
  │             Expected a variable or struct name

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/struct_ellipsis_invalid.move:10:9
   │
10 │         x
   │         ^ Unbound variable 'x'
